# toypc-other

./: .cproject  .project
Debug/: makefile  sources.mk  toypc-asm
Debug/asm/: codelist.d  input_tokenizer.d  instr_list.d  instruction.d  main.d  subdir.mk  toyasm.d
asm/: .gitignore  Makefile.am  codelist.cpp  configure.ac  input_tokenizer.cpp  instr_list.cpp  instruction.cpp  main.cpp  toyasm.cpp
asm/include/: asm.h  instr_list.h
asm/src/: codelist.cpp  input_tokenizer.cpp  instr_list.cpp  instruction.cpp  main.cpp  toyasm.cpp
include/: instr_list.h
test-asm/: test.asm
